[2kuFEKOe] Fix flaky test